--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                     <th>Média Final</th>
                 </tr>
             </thead>
-
+            <tfoot>
+                <tr>
+                    <th>Média Final</th>
+                    <th id="mediaFinal"></th>
+                </tr>
+            </tfoot>
         </table>
     </section>
 
