--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type="number" id="nota2Input" placeholder="2a Nota">
             <input type="number" id="nota3Input" placeholder="3a Nota">
             <input type="number" id="nota4Input" placeholder="4a Nota">
-            <button id="btnCadastrar">Cadastre um Aluno</button>
+            <button id="btnInserir">Inserir dados do aluno</button>
         </div>
     </section>
     <section class="alunos" style="display: none;">
