--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <table id="tblAlunos">
             <thead>
                 <tr>
-                    <th colspan="7">Nome</th>
+                    <th>Nome</th>
                     <th>1ª Nota</th>
                     <th>2ª Nota</th>
                     <th>3ª Nota</th>
